# hamiltonian_rl

./: benchmark_cartpole.py  benchmark_cartpole_lstm.py  benchmark_cartpole_ppo.py  benchmark_dhgn.py  benchmark_dhgn_lstm.py  benchmark_hgn_lstm.py  benchmark_hgn_org.py  benchmark_phgn_lstm_offline.py  benchmark_phgn_lstm_online.py  benchmark_pixels_to_state.py  benchmark_sho.py  benchmark_sho_images.py  checkpoint_common.py  cli_common.py  cnn.py  config.yaml  config_sho_images.yaml  dashboard.py  dhgn.py  dhgn_lstm.py  diag_common.py  diagnose_phgn.py  hgn.py  hgn_lstm.py  hgn_org.py  hgn_simple.py  justfile  main.py  mppi.py  phgn.py  phgn_lstm.py  prioritized_replay_buffer.py  pseudocode.py  pyproject.toml  replay_buffer.py  test_hgn.py  visualize_checkpoint.py
data/: base.py  cartpole.py  pendulum.py  sho.py
diag_imgs/: results.txt
experiments/: base.py  cartpole_offline.py  cartpole_online.py  pendulum_offline.py  pendulum_statebased_offline.py  pendulum_supervised.py  sho_dhgn.py  sho_dhgn_lstm.py  sho_hgn_lstm.py  sho_hgn_org.py
models/: base.py
notes/: controlled_dhgn_lstm_arch.tex  justfile  notes.html  notes.md  style.html
runs/Apr29_12-36-49_scylla_pendulum_offline/: events.out.tfevents.1777484209.scylla.329477.0
runs/Apr29_12-37-20_scylla_pendulum_offline/: events.out.tfevents.1777484240.scylla.329530.0
runs/Apr29_12-38-20_scylla_pendulum_offline/: events.out.tfevents.1777484300.scylla.329618.0
training/: em_trainer.py  logging_mixin.py  losses.py  trainer.py
(+4 files in other folders)
